LinkWithIcon component - fix for text wrapping when icon is being loaded

--- a/less/components/consonant/infobits/link-with-icon.less
+++ b/less/components/consonant/infobits/link-with-icon.less
@@ -24,7 +24,7 @@
 
 .consonant-link-with-ico-infobit img {
     display: block;
-    width: 100%;
+    width: @consonant-link-with-ico-infobit-img-max-size;
     height: auto;
     max-width: @consonant-link-with-ico-infobit-img-max-size;
     max-height: @consonant-link-with-ico-infobit-img-max-size;
